--- a/app/views/menus/order_food.html.erb
+++ b/app/views/menus/order_food.html.erb
@@ -50,14 +50,6 @@
       <span class="inline-block bg-no-repeat carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
-=======
-<h1>menus#order_food</h1>
-<% @menus.each do |menu| %>
-  <div>
-    <%= link_to menu.name, store_menu_path(@desk.store, menu.id, {serial_number: params[:serial_number]}) %>
-    <%= menu.price %>
-    <%= menu.note %>
->>>>>>> 28cdb54 (add update quantity button)
   </div>
 
 
@@ -97,7 +89,7 @@
                 <%= Classification.find(menu.classification_id).name %>
               </div>
               <div>
-                <%= link_to menu.name , store_menu_path(menu , @store) , class:"block mt-1 text-lg font-medium
+                <%= link_to menu.name , store_menu_path(@store, menu.id, {serial_number: params[:serial_number]}) , class:"block mt-1 text-lg font-medium
                   leading-tight hover:underline"%>
               </div>
               <p class="py-2 mt-2 text-gray-500">
@@ -110,10 +102,11 @@
             </div>
           </div>
           <% end %>
-          <%= link_to "加入購物車", add_cart_path(menu, {serial_number: params[:serial_number]}), method: "post" %>
       </div>
       <% end %>
       <%= link_to "購物車", cart_path({serial_number: params[:serial_number]}) %>
   </section>
 
   <%= render "shared/footer" %>
+
+
