--- a/app/views/menus/show.html.erb
+++ b/app/views/menus/show.html.erb
@@ -8,5 +8,5 @@
   <input data-update-quantity-target="quantity" class="border-2" type="number" name="quantity" value="1" min="1" max="10">
   <button data-action="click->update-quantity#increment" class="bg-gray-300">+</button>
 
-<%= link_to "加入購物車", add_cart_path(@menu, {serial_number: params[:serial_number]}), method: "post", data: {update_quantity_target: "link", serial_number: params[:serial_number]} %> 
+<%= link_to "加入購物車", add_cart_path(@menu, {serial_number: params[:serial_number]}), method: "post", data: {action: "click->update-quantity#addOne",  update_quantity_target: "link", serial_number: params[:serial_number]} %> 
 </div>
