--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,6 +1,6 @@
 <h1>carts#show</h1>
 <h1>桌位：<%=@desk.name%></h1>
-<h1>訂購人：<%=current_user.nickname%></h1>
+<h1>訂購人：<%= @nickname %></h1>
 <table>
   
   <tr>
