--- a/app/views/shared/_menuform.html.erb
+++ b/app/views/shared/_menuform.html.erb
@@ -1,7 +1,7 @@
 
       <section class="max-w-4xl mx-auto bg-gray-100 rounded-md shadow-md dark:bg-gray-800">
       <div class="h-3 bg-green-400 rounded-t-md"></div>
-        <h1 class="text-xl px-6 pt-6 font-bold capitalize text-block dark:text-block">店家菜單新增頁面</h1>
+        <h1 class="px-6 pt-6 text-xl font-bold capitalize text-block dark:text-block">店家菜單新增頁面</h1>
           <%= form_with( model: [ store , menu ] ) do |f| %>
             <div class="grid grid-cols-1 gap-6 px-6 pb-6 mt-4 sm:grid-cols-2">
               <div>
@@ -17,7 +17,7 @@
               <div>
                 <div>
                   <%= f.label :classification_id, "分類" ,class:"text-block dark:text-gray-200"%>
-                  <%= f.select :classification_id, @store.classifications.map{ |c| [c.name, c.id] }%>
+                  <%= f.select :classification_id, store.classifications.map{ |c| [c.name, c.id] }%>
                    
                 </div>
                 <select  class="block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring">
