--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -2,37 +2,34 @@
   <header class="flex flex-shrink-0">
     <div class="flex items-center justify-between w-full p-3 bg-maingray md:px-6">
       <nav class="flex">
+
         <button class="flex items-center mx-auto w-48 h-7 mr-4">
           <img src="/photo/wechef-logo-nbg.png" class="mr-2" alt="Flowbite Logo" style="aspect-ratio:auto">
         </button>
+
         <div class="inline-block">
-          <%= link_to '關於我們' ,"#" ,class:"px-3 py-2 font-medium leading-none text-white rounded-lg hover:bg-gray-400
-            text-md"%>
+          <%= link_to '關於我們' ,"#" ,class:"px-3 py-2 font-medium leading-none text-white rounded-lg hover:bg-gray-400 text-md"%>
         </div>
+
         <div class="inline-block">
-          <%= link_to "聯絡我們" ,"#" ,class:"px-3 py-2 font-medium leading-none text-white rounded-lg hover:bg-gray-400
-            text-md"%>
+          <%= link_to "聯絡我們" ,"#" ,class:"px-3 py-2 font-medium leading-none text-white rounded-lg hover:bg-gray-400 text-md"%>
         </div>
+
         <div class="inline-block">
-          <%= link_to "回首頁" , root_path ,class:"px-3 py-2 font-medium leading-none text-white rounded-lg
-            hover:bg-gray-400 text-md"%>
+          <%= link_to "回首頁" , root_path ,class:"px-3 py-2 font-medium leading-none text-white rounded-lg hover:bg-gray-400 text-md"%>
         </div>
       </nav>
       <%= search_form_for @q , url: store_menus_path do |f| %>
         <%= f.search_field :name_cont,placeholder:"Search....", class:"rounded-sm px-2 py-1"%>
-          <%= f.submit '搜尋' , class: 'text-white py-1 px-5 bg-gray-500 rounded-sm' %>
-            <% end %>
+        <%= f.submit '搜尋' , class: 'text-white py-1 px-5 bg-gray-500 rounded-sm' %>
+      <% end %>
     </div>
-
-
-
   </header>
+
   <div class="flex overflow-x-hidden h-screen">
     <div class="w-1/5 bg-gray-100 ">
       <nav>
-        <h2 class="w-full my-4 text-xl font-semibold tracking-wide text-center text-gray-700 uppercase">
-          <%= @store.name %>
-        </h2>
+        <h2 class="w-full my-4 text-xl font-semibold tracking-wide text-center text-gray-700 uppercase"><%= @store.name %></h2>
         <h2 class="font-semibold tracking-wide text-center text-gray-600 uppercase text-md">Store Inf</h2>
 
         <div class="mb-1">
@@ -48,17 +45,13 @@
         <div class="mb-1 flex flex-col items-start px-2 py-1 font-medium text-gray-700 rounded-lg
             text-md">
           <span>營業時間（起）： </span>
-          <span>
-            <%= @store.business_start %>
-          </span>
+          <span><%= @store.business_start %></span>
         </div>
 
         <div class="mb-1 flex flex-col items-start px-2 py-1 font-medium text-gray-700 rounded-lg
             text-md">
           <span>營業時間（迄）： </span>
-          <span>
-            <%= @store.business_end %>
-          </span>
+          <span><%= @store.business_end %></span>
         </div>
 
         <div class="mb-1">
